[tool.poetry]
name = "favie-common"
version = "0.1.5-alpha.1"
description = ""
authors = ["zayne <zayne@srp.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncstdlib = "3.12.4"
opentelemetry-api = "1.25.0"
opentelemetry-exporter-gcp-trace = "1.6.0"
opentelemetry-sdk = "1.25.0"
python-json-logger = "2.0.7"
google-cloud-bigtable = "2.26.0"
tldextract = "5.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
