[tool.poetry]
name = "favie-common"
version = "0.2.0"
description = ""
authors = ["zayne <zayne@srp.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncstdlib = "3.12.4"
opentelemetry-api = "1.25.0"
opentelemetry-exporter-gcp-trace = "1.6.0"
opentelemetry-sdk = "1.25.0"
python-json-logger = "2.0.7"
motor = "3.4.0"
redis = "5.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
