[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
name = "favie-common"
version = "0.3.9"
description = ""
authors = ["zayne <zayne@srp.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncstdlib = "3.12.4"
opentelemetry-api = "1.25.0"
opentelemetry-exporter-gcp-trace = "1.6.0"
opentelemetry-sdk = "1.25.0"
python-json-logger = "2.0.7"
pymongo = "4.8.0"
motor = "3.4.0"
redis = "5.0.6"
fastapi = ">=0.108.0"
httpx = "0.27.2"
aioboto3 = "13.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
